grades/rust_ex1_grade
-----------------------
 ex1.rs
-----------------------
	bank.rs ------------- 00/10
error[E0599]: no method named `withdrawal` found for struct `Bank` in the current scope
  --> src/main.rs:17:4
   |
17 |     b.withdrawal("William", 0);
   |       ^^^^^^^^^^ method not found in `Bank<{integer}, _>`
   |
  ::: src/bank.rs:5:1
   |
5  | pub struct Bank<T, U> {
   | --------------------- method `withdrawal` not found for this struct

error[E0599]: no method named `withdrawal` found for struct `Bank` in the current scope
  --> src/main.rs:19:15
   |
19 |     let cash = b.withdrawal("Kreuger", 6);
   |                  ^^^^^^^^^^ method not found in `Bank<{integer}, _>`
   |
  ::: src/bank.rs:5:1
   |
5  | pub struct Bank<T, U> {
   | --------------------- method `withdrawal` not found for this struct

error[E0599]: no method named `withdrawal` found for struct `Bank` in the current scope
  --> src/main.rs:21:15
   |
21 |     let cash = b.withdrawal("Kreuger", 60);
   |                  ^^^^^^^^^^ method not found in `Bank<{integer}, _>`
   |
  ::: src/bank.rs:5:1
   |
5  | pub struct Bank<T, U> {
   | --------------------- method `withdrawal` not found for this struct

error[E0599]: no method named `retrieve` found for struct `Bank` in the current scope
  --> src/main.rs:25:4
   |
25 |     b.retrieve("Walla", "pisol".to_string());
   |       ^^^^^^^^ method not found in `Bank<{integer}, String>`
   |
  ::: src/bank.rs:5:1
   |
5  | pub struct Bank<T, U> {
   | --------------------- method `retrieve` not found for this struct

error[E0599]: no method named `retrieve` found for struct `Bank` in the current scope
  --> src/main.rs:29:4
   |
29 |     b.retrieve("Walla", "pistol".to_string());
   |       ^^^^^^^^ method not found in `Bank<{integer}, String>`
   |
  ::: src/bank.rs:5:1
   |
5  | pub struct Bank<T, U> {
   | --------------------- method `retrieve` not found for this struct

error[E0599]: no method named `retrieve` found for struct `Bank` in the current scope
  --> src/main.rs:33:4
   |
33 |     b.retrieve("Koopie", "pistol".to_string());
   |       ^^^^^^^^ method not found in `Bank<{integer}, String>`
   |
  ::: src/bank.rs:5:1
   |
5  | pub struct Bank<T, U> {
   | --------------------- method `retrieve` not found for this struct
	madlib.rs ----------- 00/15
  shape.rs  ----------- 00/20
	mine_sweeper -------- 00/30

-----------------------
total ----------- 00/60  

